# ChangeLog for www-apps/egroupware
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/egroupware/ChangeLog,v 1.55 2006/07/09 20:53:05 rl03 Exp $

  09 Jul 2006; Renat Lumpau <rl03@gentoo.org>
  egroupware-1.0.0.009_p3.ebuild, egroupware-1.2.ebuild:
  einfo->elog

  29 Jun 2006; Guy Martin <gmsoft@gentoo.org> egroupware-1.2.ebuild:
  Added ~hppa to KEYWORDS.

  13 May 2006; Renat Lumpau <rl03@gentoo.org> egroupware-1.2.ebuild:
  Fixed multiple dies

*egroupware-1.2 (22 Apr 2006)

  22 Apr 2006; Renat Lumpau <rl03@gentoo.org> +files/postinstall-en-1.2.txt,
  +egroupware-1.2.ebuild:
  Version bump (#124316). Dropped ~hppa, see bug #130838.

  25 Sep 2005; Renat Lumpau <rl03@gentoo.org> -egroupware-1.0.0.009.ebuild,
  -egroupware-1.0.0.009_p2.ebuild:
  Removing vulnerable versions

  24 Sep 2005; Bryan Østergaard <kloeri@gentoo.org>
  egroupware-1.0.0.009_p3.ebuild:
  Stable on alpha, bug 106841.

  24 Sep 2005; Simon Stelling <blubb@gentoo.org>
  egroupware-1.0.0.009_p3.ebuild:
  stable on amd64 wrt bug 106841

  22 Sep 2005; Michael Hanselmann <hansmi@gentoo.org>
  egroupware-1.0.0.009_p3.ebuild:
  Stable on ppc.

  22 Sep 2005; Renat Lumpau <rl03@gentoo.org>
  egroupware-1.0.0.009_p3.ebuild:
  Stable on x86

*egroupware-1.0.0.009_p3 (21 Sep 2005)

  21 Sep 2005; Renat Lumpau <rl03@gentoo.org>
  +egroupware-1.0.0.009_p3.ebuild:
  Version bump wrt security bug #106841.

  18 Sep 2005; Bryan Østergaard <kloeri@gentoo.org>
  egroupware-1.0.0.009_p2.ebuild:
  Add back alpha keyword, bug 106002.

  18 Sep 2005; Renat Lumpau <rl03@gentoo.org> -egroupware-1.0.0.008.ebuild,
  -egroupware-1.0.0.008_p2.ebuild:
  Cleaning old versions

  18 Sep 2005; Renat Lumpau <rl03@gentoo.org>
  egroupware-1.0.0.009_p2.ebuild:
  Not using depend.php as it is not yet stable

  18 Sep 2005; Bryan Østergaard <kloeri@gentoo.org>
  egroupware-1.0.0.009_p2.ebuild:
  Removing alpha keyword until the dev-lang/php problem is fixed.
