@@ -1,6 +1,12 @@
 # ChangeLog for www-apps/egroupware
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/egroupware/ChangeLog,v 1.55 2006/07/09 20:53:05 rl03 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/egroupware/ChangeLog,v 1.56 2006/08/01 22:56:04 rl03 Exp $
+
+*egroupware-1.2.104 (01 Aug 2006)
+
+  01 Aug 2006; Renat Lumpau <rl03@gentoo.org> -egroupware-1.2.ebuild,
+  +egroupware-1.2.104.ebuild:
+  Version bump
 
   09 Jul 2006; Renat Lumpau <rl03@gentoo.org>
   egroupware-1.0.0.009_p3.ebuild, egroupware-1.2.ebuild:
